# Unmdx

./: .gitignore  .pre-commit-config.yaml  API_TEST_REPORT_AGENT_1.md  AUDIT_REPORT.md  CLAUDE.md  README.md  RECOVERY_PLAN.md  agent2_validation_report.py  comprehensive_edge_case_specification.md  dax_spec.md  debug_calc_expressions.py  debug_calc_member.py  debug_edge_cases.py  debug_test_case_3.py  ir_spec.md  ir_transformer.md  linter_spec.md  mdx_spec.md  project_overview.md  pyproject.toml  test_advanced_mdx_features.py  test_calculated_members.py  test_operators.py  validate_agent1_edge_cases.py
docs/: IR_ARCHITECTURE.md  README.md  edge_cases_specification.md  mdx_grammar_spec_pt1.md  mdx_grammar_spec_pt2.md  project_overview.md  test_cases_advanced.md  test_cases_basic.md  test_cases_fail.md
docs/cli/: commands.md
docs/configuration/: options.md
docs/troubleshooting/: common-issues.md
docs/user-guide/: README.md  getting-started.md
examples/: README.md  dax_generation_example.py  linter_example.py  working_examples.py
src/unmdx/: __init__.py  api.py  config.py  exceptions.py  results.py
src/unmdx/cli/: interactive.py  main.py
src/unmdx/dax_generator/: __init__.py  core.py  dax_formatter.py  dax_generator.py  expression_converter.py  generator.py  utils.py
src/unmdx/explainer/: __init__.py  generator.py
src/unmdx/ir/: __init__.py  enums.py  expressions.py  models.py  serialization.py
src/unmdx/linter/: __init__.py  base.py  enums.py  mdx_linter.py  models.py
src/unmdx/parser/: __init__.py  grammar_validator.py  mdx_grammar.lark  mdx_parser.py  tree_visitor.py
src/unmdx/transformer/: __init__.py  comment_extractor.py  hierarchy_normalizer.py  mdx_transformer.py  set_flattener.py
src/unmdx/utils/: logging.py
src/unmdx_v2/: README.md  README_DAX_GENERATOR.md  __init__.py  test_workflow.py
src/unmdx_v2/core/: LARK_TRANSFORMER_SUMMARY.md  README_LARK_PARSER.md  __init__.py  converter.py  dax_generator.py  lark_parser.py  lark_transformer.py  mdx_grammar_v2.lark  parser.py
src/unmdx_v2/tests/: test_foundation.py  test_specific_members.py  test_where_clause.py
tests/fixtures/: __init__.py  basic_queries.py
tests/integration/: test_api_integration.py  test_basic_cases.py  test_dax_generation.py  test_dax_generator_integration.py  test_explainer_integration.py  test_ir_integration.py  test_specification_test_cases.py  test_transformer_integration.py
tests/integration/linter/: __init__.py  test_linter_integration.py  test_parser_linter_integration.py
tests/unit/: test_api_consistency.py  test_config.py  test_dax_generator.py  test_documentation_examples.py  test_exceptions.py  test_explainer.py  test_ir_models.py  test_logging.py  test_mdx_parser.py  test_public_api.py  test_results.py
tests/unit/dax_generator/: __init__.py  test_core.py  test_dax_formatter.py  test_dax_generator.py  test_expression_converter.py  test_utils.py
tests/unit/explainer/: __init__.py  test_explainer_generator.py
tests/unit/ir/: __init__.py  test_ir_construction.py  test_ir_operations.py
tests/unit/linter/: __init__.py  test_mdx_linter.py  test_parentheses_cleaner.py
tests/unit/parser/: __init__.py  test_basic_queries.py  test_grammar_validator.py  test_parser_components.py
tests/unit/transformer/: __init__.py  test_basic_transformations.py  test_comment_extractor.py  test_hierarchy_normalizer.py  (+1 more)
unmdx_mcp_server/: CLAUDE_INTEGRATION.md  COMPLETION_SUMMARY.md  MCP_USAGE_GUIDE.md  README.md  main.py  populate_current_state.py  pyproject.toml  requirements.txt  schema.sql  test_database.py  test_mcp_server.db  test_mcp_server.py  test_mcp_tools.py  unmdx_project.db  unmdx_tracking.db  verify_mcp_server.py
unmdx_mcp_server/config/: server_config.py
unmdx_mcp_server/scripts/: start_server.py
unmdx_mcp_server/src/unmdx_tracker/: __init__.py  cli.py  database.py  mcp_server.py  models.py
unmdx_mcp_server/tests/: __init__.py  test_mcp_server.py
(+5 files in other folders)
