[project]
name = "unmdx-mcp-server"
version = "0.1.0"
description = "MCP Server for UnMDX Project Tracking"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.10.1",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
unmdx-tracker = "unmdx_tracker.cli:main"
unmdx-mcp-server = "unmdx_tracker.mcp_server:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unmdx_tracker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
asyncio_mode = "auto"
